--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                    <td class="dado"><button class="button" onclick="insert('/')">/</button></td>
 
-                   <td class="dado"><button class="button" onclick="insert('X')">X</button></td>
+                   <td class="dado"><button class="button" onclick="insert('*')">X</button></td>
                </tr>
                <tr>
                     <td class="dado"><button class="button" onclick="insert('7')">7</button></td>
